[package]
name = "firefly_tg"
version = "0.1.7"
edition = "2018"
publish = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
routerify = "2.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "time"] }
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4"
sled = "0.34"
sled-extensions = { version = "0.2", features = ["bincode"] }
urlencoding = "2.1"
